deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sssaini-deploy
  labels:
    app: nodejs-app
spec:
  selector:
    matchLabels:
      app: nodejs-app
  replicas: 2

  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: sssaini/hello-world
        ports:
        - containerPort: 3000


# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nodejs-app
# spec:
#   selector:
#     app: nodejs-app
#   ports:
#     - protocol: TCP
#       port: 3000
#       # targetPort: 3000
#       # nodePort: 30083 #external port 
#   type: NodePort
